# py-ssrs

./: .gitignore  README.md  pyproject.toml  run_script.bat
files_params/: ssrs_reports_mfc.xlsx  ssrs_reports_spdu.xlsx
ssrs/: config.py  excel.py  logger.py  mail.py  main.py  models.py  request_api.py
tests/: test_ssrs.py
